Write a real README
The one line here repeated the repository description and said nothing about where the project actually is. Somebody landing on it could not tell that the published package is a 0.0.0 placeholder that throws, which is the single most useful fact about this repository today.

Written after installing every published placeholder on a machine that had never seen it, so the messages quoted are the ones the registries actually serve rather than the ones the source says they should.